# kinectControlNao

naokinect1.0control/: CMakeLists.txt  main.cpp  qiproject.xml
naokinect1.0control/build-mytoolchain/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  KinectInteraction180_32.lib  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  data.csv  dependencies.cmake  nao_kinect1.0_control.sln  nao_kinect1.0_control.vcxproj  nao_kinect1.0_control.vcxproj.filters  qitest.cmake  test_nao_kinect1.0_control.vcxproj  test_nao_kinect1.0_control.vcxproj.filters
naokinect1.0control/build-mytoolchain/Win32/Debug/ZERO_CHECK/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
naokinect1.0control/build-mytoolchain/nao_kinect1.0_control.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  nao_kinect1.0_control_d_manifest.rc  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
naokinect1.0control/build-mytoolchain/sdk/: qitest.json
naokinect1.0control/build-mytoolchain/test_nao_kinect1.0_control.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  test_nao_kinect1.0_control.lastbuildstate  test_nao_kinect1.0_control_d_manifest.rc
(+1 files in other folders)
